# BakeMaterialInUE

./: CMakeLists.txt  README.md  build_mods_shipping.bat  generate_project_files.bat
MyCPPMods/MyExampleMod/: CMakeLists.txt
MyCPPMods/MyExampleMod/src/: AssetUtils.cpp  AssetUtils.h  GuiComponent_List.h  TypeDefine.h  UClassHelper.hpp  dllmain.cpp
